{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 24,
  "lineage": "991c4c45-f16d-0e04-23ed-fed4a6703d66",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:295748148791:instance/i-04a4feed7be0d5086",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a4feed7be0d5086",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sistema-agendamento-4minds-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec858b8413f1aba1",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-54-161-2-107.compute-1.amazonaws.com",
            "public_ip": "54.161.2.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b51d358c78dc8f72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028b5f542deccc054",
            "tags": {
              "Name": "sistema-agendamento-4minds-web-server"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030f6f3bdadc0b0b4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_key_pair.deployer",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:internet-gateway/igw-05c9cf885f2aaf6d1",
            "id": "igw-05c9cf885f2aaf6d1",
            "owner_id": "295748148791",
            "tags": {
              "Name": "sistema-agendamento-4minds-igw"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-igw"
            },
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:route-table/rtb-0fdbb92e0a0ad4e06",
            "id": "rtb-0fdbb92e0a0ad4e06",
            "owner_id": "295748148791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c9cf885f2aaf6d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sistema-agendamento-4minds-public-rt"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b58389645434ad",
            "route_table_id": "rtb-0fdbb92e0a0ad4e06",
            "subnet_id": "subnet-028b5f542deccc054"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:security-group/sg-030f6f3bdadc0b0b4",
            "description": "Security group para EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030f6f3bdadc0b0b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "sistema-agendamento-4minds-ec2-20251004130602862700000001",
            "name_prefix": "sistema-agendamento-4minds-ec2-",
            "owner_id": "295748148791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sistema-agendamento-4minds-ec2-sg"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:security-group/sg-04a8d68a07b8a200c",
            "description": "Security group para RDS",
            "egress": [],
            "id": "sg-04a8d68a07b8a200c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030f6f3bdadc0b0b4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sistema-agendamento-4minds-rds-20251004130607439600000003",
            "name_prefix": "sistema-agendamento-4minds-rds-",
            "owner_id": "295748148791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sistema-agendamento-4minds-rds-sg"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:subnet/subnet-0d83c00d8d674f88e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d83c00d8d674f88e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295748148791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sistema-agendamento-4minds-private-subnet-1"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-private-subnet-1"
            },
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:subnet/subnet-0ff2c80dfe5373125",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff2c80dfe5373125",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295748148791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sistema-agendamento-4minds-private-subnet-2"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-private-subnet-2"
            },
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:subnet/subnet-028b5f542deccc054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028b5f542deccc054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "295748148791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sistema-agendamento-4minds-public-subnet"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-public-subnet"
            },
            "vpc_id": "vpc-0e5184bdbf3bdd975"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295748148791:vpc/vpc-0e5184bdbf3bdd975",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0176c00aa05b0b062",
            "default_route_table_id": "rtb-03fb7c6a674468506",
            "default_security_group_id": "sg-09f5a6ee16db4b650",
            "dhcp_options_id": "dopt-078ed1618c384ce7b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5184bdbf3bdd975",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fb7c6a674468506",
            "owner_id": "295748148791",
            "tags": {
              "Name": "sistema-agendamento-4minds-vpc"
            },
            "tags_all": {
              "Name": "sistema-agendamento-4minds-vpc"
            }
          }
        }
      ]
    }
  ]
}